[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
tui = { version = "0.17", default-features = false, features = ['termion'] }
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
crossterm = { version = "0.22", optional = true }
serde = { version = "1", features = ["derive"]}
rand = "0.8"
argh = "0.1"
serde_json = "1.0"
chrono = "0.4.19"
bson = "2.1.0"
